--- a/mall_test/templates/mall_test/payment_detail.html
+++ b/mall_test/templates/mall_test/payment_detail.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
+{% extends "mall_test/base.html" %}
 
 {% block content %}
-    <!-- breadcrumb-section -->
-
     <div class="breadcrumb-section breadcrumb-bg">
 
         <div class="container">
@@ -13,9 +11,9 @@
 
                     <div class="breadcrumb-text">
 
-                        <p>결제 테스트</p>
+                        <p>payment_detail</p>
 
-                        <a href="{% url 'payment_new' %}">새 결제 만들기</a>
+                        <h1>결제내역</h1>
 
                     </div>
 
@@ -24,7 +22,11 @@
             </div>
 
         </div>
-
     </div>
-    <!-- end breadcrumb section -->
+    <ul>
+        <li>{{ payment.get_status_display }}</li>
+        <li>결제 아이디: {{ payment.merchant_uid }}</li>
+        <li>결제명 : {{ payment.name }}</li>
+        <li>결제금액 : {{ payment.amount }}</li>
+    </ul>
 {% endblock %}
